# toylang

./: Cargo.toml
examples/: 1.toy  2.toy  4.toy
src/: ast.rs  eval.rs  lexer.rs  main.rs  syntax.lalrpop  token.rs  value.rs
