[package]
name = "toylang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
anyhow = "1"
clap = { version = "4.4.0", features = ["derive"] }
compact_str = "0.7.1"
im = "15.1.0"
lalrpop-util = "0.20.0"
regex = "1"
rustyline = "12.0.0"
smallvec = "1.11.0"
thiserror = "1"
